# IOccultCalc Tests
message(STATUS "Parsing tests/CMakeLists.txt")

add_executable(test_time_utils test_time_utils.cpp)
target_link_libraries(test_time_utils ioccultcalc)

add_executable(test_orbit_propagator_rkf78 test_orbit_propagator_rkf78.cpp)
target_link_libraries(test_orbit_propagator_rkf78 ioccultcalc)

add_executable(test_propagation_vs_horizons test_propagation_vs_horizons.cpp)
target_link_libraries(test_propagation_vs_horizons ioccultcalc)

add_executable(test_vesta_propagation test_vesta_propagation.cpp)
target_link_libraries(test_vesta_propagation ioccultcalc)

add_executable(test_allnum_parsing test_allnum_parsing.cpp)
target_link_libraries(test_allnum_parsing ioccultcalc)

add_executable(test_asteroid_list_reader test_asteroid_list_reader.cpp)
target_link_libraries(test_asteroid_list_reader ioccultcalc)

add_executable(test_astnum_output test_astnum_output.cpp)
target_link_libraries(test_astnum_output ioccultcalc)

add_executable(test_combined_lists test_combined_lists.cpp)
target_link_libraries(test_combined_lists ioccultcalc)

add_executable(test_localasteroid_real test_localasteroid_real.cpp)
target_link_libraries(test_localasteroid_real ioccultcalc)

add_executable(test_oop_presets test_oop_presets.cpp)
target_link_libraries(test_oop_presets ioccultcalc)

add_executable(test_oop_with_asteroid_lists test_oop_with_asteroid_lists.cpp)
target_link_libraries(test_oop_with_asteroid_lists ioccultcalc)

add_executable(test_rkf78_comparison test_rkf78_comparison.cpp)
target_link_libraries(test_rkf78_comparison ioccultcalc)

# New Occultation Engine Test
add_executable(test_occultation_engine test_occultation_engine.cpp)
target_link_libraries(test_occultation_engine ioccultcalc)

add_executable(test_jpl_horizons_comparison test_jpl_horizons_comparison.cpp)
target_link_libraries(test_jpl_horizons_comparison ioccultcalc)

add_executable(test_mean_to_osculating test_mean_to_osculating.cpp)
target_link_libraries(test_mean_to_osculating ioccultcalc)

add_executable(test_asteroid_sqlite test_asteroid_sqlite.cpp)
target_link_libraries(test_asteroid_sqlite ioccultcalc)

add_executable(test_asteroid_database_sqlite test_asteroid_database_sqlite.cpp)
target_link_libraries(test_asteroid_database_sqlite ioccultcalc)

find_package(GTest REQUIRED)

add_executable(test_jpl_astdys_comparison test_jpl_astdys_comparison.cpp)
target_link_libraries(test_jpl_astdys_comparison ioccultcalc GTest::GTest GTest::Main)

# Tests registration
add_test(NAME TimeUtils COMMAND test_time_utils)
add_test(NAME AllnumParsing COMMAND test_allnum_parsing)
add_test(NAME OccultationEngine COMMAND test_occultation_engine)